fixed spacing around service card tags

--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -133,8 +133,9 @@ li {
 }
 
 .card {
-  height: 100%;
+  width: auto;
   display: block;
+
 }
 
 #horn{
